# it-procurement-automation

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: bugs.md  development.md
src/: cli.py  config_loader.py  setup_wizard.py
src/connectors/: azure_ad.py  jira.py  netsuite.py  vendor.py
src/data/: cost_centers.xlsx
src/mock/: jira_tickets.py  netsuite_orders.py  vendor_catalog.py
src/modules/: notifications.py  price_validator.py  quotes.py
