[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "it-procurement-automation"
version = "0.1.0"
description = "End-to-end hardware procurement automation for IT teams"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["procurement", "automation", "jira", "netsuite", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "jira>=3.5.0,<4.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "fpdf2>=2.7.0",
    "playwright>=1.40.0",
    "requests-oauthlib>=1.3.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/TonyCr99/it-procurement-automation"
Repository = "https://github.com/TonyCr99/it-procurement-automation"
"Bug Tracker" = "https://github.com/TonyCr99/it-procurement-automation/issues"

[project.scripts]
procurement = "src.cli:main"